--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
    
-    <button id="connect">Connect to BLE</button>
+    <button id="connect">Connect to BLE 1.1</button>
     <button id="start">Send Start</button>
     <button id="stop">Send Stop</button>
     <div id="output">Output will appear here...</div>
@@ -46,6 +46,7 @@
                 log('Requesting BLE device...');
                 device = await navigator.bluetooth.requestDevice({
                     filters: [{ name: 'AAA' }], // 设备名称
+                    acceptAllDevices:true,
                     optionalServices: [UART_SERVICE_UUID] // 服务 UUID
                 });
 
